Truncated unnecessary whitespace from messages to prevent empty strings from being sent.

--- a/client/app/stylesheets/index.scss
+++ b/client/app/stylesheets/index.scss
@@ -128,7 +128,7 @@ body {
         }
       }
       .messageInput {
-        min-height: 39px;
+        height: 25px;
         max-height: 100px;
         border: none;
         width: 100%;
